--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=nodeApi
+DB_USER=nextecki_frwrd
+DB_PASSWORD=nextecki_frwrd@#123
+DB_DATABASE=nextecki_frwrd
 DB_CONNECTION_LIMIT=10
