--- a/.env
+++ b/.env
@@ -1,5 +1,21 @@
-DB_HOST=localhost
-DB_USER=nextecki_frwrd
-DB_PASSWORD=nextecki_frwrd@#123
-DB_DATABASE=nextecki_frwrd
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_DATABASE=nodeApi
+# DB_CONNECTION_LIMIT=10
+
+
+
+# DB_HOST=nextecki.com
+# DB_USER=nextecki_frwrd
+# DB_PASSWORD=nextecki_frwrd@#123
+# DB_DATABASE=nextecki_frwrd
+# DB_CONNECTION_LIMIT=10
+
+
+DB_HOST=103.111.228.5   
+DB_USER=developer_testing
+DB_PASSWORD=developer_testing@123
+DB_DATABASE=developer_testing
 DB_CONNECTION_LIMIT=10
+DB_PORT=3306
